<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="20sp"
            android:background="@drawable/ic_vector_messages_stroke"
            android:tint="@color/grey" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/send_direct_msg"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="20sp"
            android:background="@drawable/ic_vector_bookmark_plus_stroke"
            android:tint="@color/grey" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/add_tweet_bookmark"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="20sp"
            android:background="@drawable/ic_vector_share_android"
            android:tint="@color/grey" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/share_tweet_via"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>