<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".modules.compose.ComposeTweetFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/topRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <ImageView
            android:id="@+id/closeFragmentImageView"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="10sp"
            android:background="@drawable/ic_cc_nav_dismiss" />

        <TextView
            android:id="@+id/draftButton"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/tweetButton"
            android:text="@string/draft_button"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/tweetButton"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginRight="20sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/tweet_button_background"

            android:text="@string/tweet_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_below="@+id/topRelativeLayout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:background="@drawable/ic_directshare_single" />

        <EditText
            android:id="@+id/tweetMessageEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:background="@color/white"
            android:focusable="true"
            android:hint="@string/tweet_hint">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1sp"
        android:layout_above="@+id/bottomLayout"

        android:background="@color/grey"></LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="fill_parent"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="11.6"
            android:layout_margin="10sp">

            <ImageView
                android:id="@+id/galleryImageView"
                android:layout_width="30sp"
                android:layout_height="30sp"

                android:src="@drawable/ic_vector_medium_photo_stroke_tint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="11.6"
            android:layout_margin="10sp">

            <ImageView
                android:id="@+id/gifImageView"
                android:layout_width="30sp"
                android:layout_height="30sp"

                android:src="@drawable/ic_vector_gif_pill_stroke"
                android:tint="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"

            android:layout_weight="11.6"
            android:layout_margin="10sp">

            <ImageView
                android:id="@+id/pollImageView"
                android:layout_width="30sp"
                android:layout_height="30sp"

                android:src="@drawable/ic_vector_bar_chart_horizontal_stroke"
                android:tint="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="11.6"
            android:layout_margin="10sp">

            <ImageView
                android:id="@+id/locationImageView"
                android:layout_width="30sp"
                android:layout_height="30sp"

                android:src="@drawable/ic_vector_location_stroke"
                android:tint="@color/colorPrimary" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="31.6"></LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="11.6"
            android:layout_margin="10sp">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="30sp"
                android:layout_height="30sp"
                app:cpb_background_progressbar_color="#DDE2E6"
                app:cpb_background_progressbar_width="2.5dp"
                app:cpb_progressbar_color="@color/colorPrimary"
                app:cpb_progressbar_width="3dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="1sp"
            android:layout_height="fill_parent"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="11.6"
            android:layout_margin="10sp">

            <ImageView
                android:id="@+id/addAnotherTweetImageView"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:clickable="false"
                android:enabled="false"
                android:src="@drawable/ic_vector_plus_circle"
                android:tint="@color/colorPrimary" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>